--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-scripts": "3.2.0",
-    "react-dnd": "11.1.3",
-    "react-dnd-html5-backend": "11.1.3",
     "babel-jest": "23.6.0",
     "faker": "^4.1.0",
     "immutability-helper": "^3.0.0",
-    "react-frame-component": "^4.1.0"
+    "react": "^16.14.0",
+    "react-dnd": "11.1.3",
+    "react-dnd-html5-backend": "11.1.3",
+    "react-dom": "^16.14.0",
+    "react-frame-component": "^4.1.0",
+    "react-scripts": "3.2.0"
   },
   "browserslist": [
     ">0.2%",
